syntax = "proto3";

package exchanger;
option go_package = "github.com/PlakarKorp/plakar/SDK/exchanger;exchanger";

service Exchanger {
  rpc Scan (stream ScanMessage) returns (stream ScanMessage);
  rpc NewReader (stream ReaderMessage) returns (stream ReaderMessage);
}

message ScanMessage {
  string data = 1;
}

message ReaderMessage {
  string chunk = 1;
}
